# llm-tool-calling-demo

./: README.md  config.py  main.py  pyproject.toml  requirements.txt
services/: __init__.py  agent.py
tools/: __init__.py  weather.py
