[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-tool-calling-demo"
version = "0.1.0"
description = "Production-grade demo of LLM tool-calling with Groq and OpenWeatherMap"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "groq>=0.13.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "types-requests>=2.31.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*", "services*"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
